--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@stripe/stripe-js": "^2.1.7",
+    "bcrypt": "^5.1.1",
+    "firebase": "^10.4.0",
+    "joi": "^17.11.0",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.6.0",
+    "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
-    "next": "13.5.4"
+    "react-toastify": "^9.1.3",
+    "stripe": "^13.9.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
