--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.17",
     "@stripe/stripe-js": "^2.1.7",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "firebase": "^10.4.0",
     "joi": "^17.11.0",
     "js-cookie": "^3.0.5",
