--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "stripe": "^13.9.0"
   },
