--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
+    "@react-icons/all-files": "^4.1.0",
     "@stripe/stripe-js": "^2.1.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
@@ -21,8 +22,11 @@
     "next": "13.5.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
     "stripe": "^13.9.0"
   },
   "devDependencies": {
