--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^2.1.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "classnames": "^2.3.2",
     "firebase": "^10.4.0",
     "joi": "^17.11.0",
     "js-cookie": "^3.0.5",
@@ -26,8 +27,10 @@
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "sass": "^1.69.5",
     "slick-carousel": "^1.8.1",
-    "stripe": "^13.9.0"
+    "stripe": "^13.9.0",
+    "unorm": "^1.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^10",
